--- a/src/styles/Laptop.css
+++ b/src/styles/Laptop.css
@@ -4,3 +4,20 @@
   margin-bottom: -2rem;
   margin-top: -10rem;
 }
+
+/* Responsive design */
+@media (max-width: 768px) {
+  .laptop-container {
+    height: 350px;
+    margin-top: -10rem;
+    margin-bottom: -1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .laptop-container {
+    height: 300px;
+    margin-top: -10rem;
+    margin-bottom: 0rem;
+  }
+}
